--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
   "extensions": [
     "ms-vscode.cmake-tools", 
     "ms-vscode.cpptools",
-    "twxs.cmake",
+    "ms-vscode.cpptools-extension-pack",
     "ms-vscode.git",
     "ms-vscode.makefile-tools"
   ],
