--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "cmake.sourceDirectory": "/workspace/exercises",
+    "cmake.sourceDirectory": "/workspace/MockGraphFramework",
     "files.associations": {
         "array": "cpp",
         "atomic": "cpp",
