--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
     "ms-vscode.cpptools",
     "ms-vscode.cpptools-extension-pack",
     "ms-vscode.git",
-    "ms-vscode.makefile-tools"
+    "ms-vscode.makefile-tools",
+    "mermaidchart.vscode-mermaid-chart
   ],
   "postCreateCommand": "echo 'Dev container is ready!'",
   "remoteUser": "root",
