--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,12 @@
 {
     "configurations": [
     {
-        "name": "(gdb) Framework",
-        "type": "cppdbg",
+        "name": "(lldb) Framework",
+        "type": "lldb",
         "request": "launch",
         "program": "${workspaceFolder}/build/app",
         "args": [],
-        "stopAtEntry": false,
-        "cwd": "${workspaceFolder}",
-        "environment": [],
-        "externalConsole": false,
-        "MIMode": "gdb",
-        "setupCommands": [
-            {
-                "description": "Enable pretty-printing for gdb",
-                "text": "-enable-pretty-printing",
-                "ignoreFailures": true
-            },
-            {
-                "description": "Set Disassembly Flavor to Intel",
-                "text": "-gdb-set disassembly-flavor intel",
-                "ignoreFailures": true
-            }
-        ]
+        "cwd": "${workspaceFolder}"
     }
     ]
 }
